--- a/browse_cars.html
+++ b/browse_cars.html
@@ -83,7 +83,7 @@
     </div>
 
     <section class="row text-center">
-        <h5 class="bg-light"><I>luxury and speed</I></h5 bg bg-light>
+        <h5 class="bg-light"><I>Luxury and speed</I></h5 bg bg-light>
         <div class="col-md-3">
             <div class="card shadow">
                 <div class="card-header">
